Se finalizó la implementación de stripe

--- a/src/views/cancel.handlebars
+++ b/src/views/cancel.handlebars
@@ -1,1 +1,8 @@
-COMPRA CANCELADA
+<div class="container mt-5">
+        <div class="text-center">
+            <h1 class="display-4">¡Compra Cancelada!</h1>
+            <p class="lead">Lo sentimos, tu transacción ha sido cancelada.</p>
+            <p class="text-muted">Por favor, intenta nuevamente o contacta al soporte si necesitas ayuda.</p>
+            <a href="/cart" class="btn btn-primary mt-4">Intentar nuevamente</a>
+        </div>
+    </div>
