--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -48,13 +48,13 @@
           <a class="nav-link" href="/">Inicio</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" id="newProduct" href="/products/real">Publicar un Producto</a>
+          <a class="nav-link" id="newProduct" href="/products/new">Publicar un Producto</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" id="purchases" href="#">Compras</a>
+          <a class="nav-link" id="purchases" href="/miscompras">Compras</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" id="sells" href="#">Ventas</a>
+          <a class="nav-link" id="sells" href="/misventas">Ventas</a>
         </li>
         <li class="nav-item" id="register">
           <a class="nav-link" href="/register">Registro</a>
@@ -81,11 +81,12 @@
   </nav>
 </header>
     
-
+    <div class="d-flex flex-column min-vh-100">
     {{{body}}}
+    </div>
 
     <!-- Footer -->
-    <footer class="bg-dark text-light text-center fixed-bottom py-3">
+    <footer class="bg-dark text-light text-center py-3 mt-auto">
       <div class="container">
         <p>Manantiales Market © 2024 - Todos los derechos reservados</p>
       </div>
@@ -127,11 +128,8 @@
       document.getElementById("logoutDiv").classList.add("d-none");
       document.getElementById("cartDiv").classList.add("d-none");
       document.getElementById("newProduct").classList.add("d-none");
-<<<<<<< HEAD
       document.getElementById("purchases").classList.add("d-none");
       document.getElementById("sells").classList.add("d-none");
-=======
->>>>>>> main
 
       
     }
