--- a/src/views/productDetail.handlebars
+++ b/src/views/productDetail.handlebars
@@ -250,7 +250,7 @@
   });
 </script>
 
-
+<script>
 
   document.addEventListener("DOMContentLoaded", function() {
 
@@ -294,7 +294,9 @@
     });
   }
 });
+</script>
 
+<script>
  document.addEventListener('DOMContentLoaded', () => {
     let productIdToDelete = null;
     
